@@ -22,8 +22,6 @@
 #include <stdarg.h>
 #include "php_config.h"
 
-#if PHP_BROKEN_SPRINTF
-
 int
 php_sprintf (char*s, const char* format, ...)
 {
@@ -38,8 +36,6 @@ php_sprintf (char*s, const char* format, ...)
     return -1;
   return strlen (s);
 }
-
-#endif /* PHP_BROKEN_SPRINTF */
 
 /*
  * Local variables:
