@@ -462,8 +462,6 @@ ap_php_gcvt(double number, int ndigit, char *buf, boolean_e altform)
 	return (buf);
 }
 
-#if !defined(HAVE_SNPRINTF) || !defined(HAVE_VSNPRINTF) || PHP_BROKEN_SNPRINTF || PHP_BROKEN_VSNPRINTF
-
 /*
  * NUM_BUF_SIZE is the size of the buffer used for arithmetic conversions
  *
@@ -987,8 +985,6 @@ int ap_php_vsnprintf(char *buf, size_t len, const char *format, va_list ap)
 	strx_printv(&cc, buf, len, format, ap);
 	return (cc);
 }
-
-#endif							/* HAVE_SNPRINTF */
 
 /*
  * Local variables:
